2020-08-03  Adrian Perez de Castro  <aperez@igalia.com>

        Non-unified build fixes, early August 20202 edition
        https://bugs.webkit.org/show_bug.cgi?id=215082

        Unreviewed build fix.

        * dfg/DFGOSREntry.h: Add missing inclusion of CodeLocation.h
        * ftl/FTLGeneratedFunction.h: Ditto.
        * jit/CallFrameShuffler.h: Forward-declare CCallHelpers.

2020-08-02  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, fix CLoop build
        https://bugs.webkit.org/show_bug.cgi?id=215010

        * tools/SigillCrashAnalyzer.cpp:

2020-08-02  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r265151.
        https://bugs.webkit.org/show_bug.cgi?id=215074

        Broke ARM64E JSC tests

        Reverted changeset:

        "validate untagArrayPtr"
        https://bugs.webkit.org/show_bug.cgi?id=214953
        https://trac.webkit.org/changeset/265151

2020-08-01  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r265097, r265113, and r265122.
        https://bugs.webkit.org/show_bug.cgi?id=215065

        Broke AppleSilicon Big Sur

        Reverted changesets:

        "Strip pointers instead of authing for byteOffset to not allow
        for a possible way to guess data pac"
        https://bugs.webkit.org/show_bug.cgi?id=214952
        https://trac.webkit.org/changeset/265097

        "Compute number of PAC bits from what the OS says its address
        space is"
        https://bugs.webkit.org/show_bug.cgi?id=214986
        https://trac.webkit.org/changeset/265113

        "Remove UB from nonPACBitsMask computation"
        https://bugs.webkit.org/show_bug.cgi?id=214996
        https://trac.webkit.org/changeset/265122

2020-07-31  Keith Miller  <keith_miller@apple.com>

        Move Options setter to where we allow access to the Options object
        https://bugs.webkit.org/show_bug.cgi?id=215028

        Reviewed by Saam Barati.
